--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -6,3 +6,8 @@
   height:100%
   font-size: -webkit-xxx-large
   
+.footerstyle 
+    text-align: center
+    background-color: black
+    color: white
+    font-size: 12px
